docs/openshift/config_examples/f5-kctlr-openshift-routes.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      # Name of the Service Account bound to a Cluster Role with the required
      # permissions
      serviceAccountName: bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:1.4.0"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            # Replace with the IP address or hostname of your BIG-IP device
            "--bigip-url=10.190.24.171",
            # Replace with the name of the BIG-IP partition you want to manage
            "--bigip-partition=openshift",
            "--pool-member-type=cluster",
            # Replace with the path to the BIG-IP VXLAN connected to the
            # OpenShift HostSubnet
            "--openshift-sdn-name=/Common/openshift_vxlan",
            # Enables use of a BIG-IP device as an OpenShift Router
            "--manage-routes=true",
            # Assign an IP address to the BIG-IP virtual server
            # Be sure to use an IP address from the HostSubnet to which the
            # BIG-IP device connects
            "--route-vserver-addr=1.2.3.4"
            # OPTIONAL: Provide an "f5type" label you want the BIG-IP Controller
            # to watch for. This information should be defined in a Route
            # Resource (for example, "f5type: App1")
            "--route-label=App1"
            ]
      imagePullSecrets:
        - name: f5-docker-images
        - name: bigip-login
