docs/openshift/config_examples/f5-openshift-edge-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: myService
  name: myService-route-edge
  namespace: default
spec:
  host: mysite.example.com
  path: "/myApp"
  port:
    targetPort: 443
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      [...]
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      [...]
      -----END PRIVATE KEY-----
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      [...]
      -----END CERTIFICATE-----
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  to:
    kind: Service
    name: myService
