docs/openshift/config_examples/f5-openshift-passthrough-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: myService
  name: myService-route-passthrough
  namespace: default
spec:
  host: mysite.example.com
  path: "/myApp"
  port:
    targetPort: 443
  tls:
    termination: passthrough
  to:
    kind: Service
    name: myService
