docs/openshift/config_examples/f5-openshift-route-health-monitor.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-unsecured
  annotations:
    # See the k8s-bigip-ctlr documentation for information about
    # all Route Annotations
    # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-route-annotations
    virtual-server.f5.com/balance: fastest-node
    virtual-server.f5.com/clientssl: /Common/client-ssl
    virtual-server.f5.com/health: |
      [
        {
          "path":     "mysite.example.com/app1",
          "send":     "HTTP GET /health/app1",
          "interval": 5,
          "timeout":  10
        }
      ]
spec:
  host: mysite.example.com
  path: "/app1"
  to:
    kind: Service
    name: myService1
