docs/openshift/config_examples/f5-openshift-unsecured-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    name: myService
  name: myService-route-unsecured
  annotations:
    # See the k8s-bigip-ctlr documentation for information about
    # all Route Annotations
    # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-route-annotations
    virtual-server.f5.com/balance: least-connections-node
spec:
  host: mysite.example.com
  path: "/myApp"
  port:
    targetPort: 80
  to:
    kind: Service
    name: myService
